# stoier

./: .gitignore  README.md  pyproject.toml
stoier/: account.py  afa.py  clean.py  csvtoyaml.py  deduplicate.py  iterate.py  log.py  report.py  utils.py  validate.py
stoier/templates/: account.html  index.html
